<resources>
    <string name="app_name">Submission2</string>
    <string name="search">search</string>
    <string name="search_hint">Input Username</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="tab_text_1">Following</string>
    <string name="tab_text_2">Follower</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Username">username</string>
    <string name="name">name</string>
    <string name="todo">TODO</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="logo">LOGO</string>
    <string name="repository">Repository</string>
    <string name="reposit_number">999</string>
    <string name="settings">settings</string>
    <string name="favorites">favorites</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="splash">splash</string>
    <string name="share">share</string>
    <string name="user_background">user background</string>
    <string name="name_logo">name logo</string>
    <string name="company_logo">company logo</string>
    <string name="location_logo">location logo</string>
</resources>