<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userProfile"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"/>

        <ImageView
            android:id="@+id/userProfile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/todo"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userProfile"
            android:layout_marginStart="25dp"
            android:layout_marginTop="32dp"
            android:text="@string/Username"
            android:textSize="32sp" />

        <ImageView
            android:id="@+id/people"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_baseline_people_24" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/people"
            android:text="@string/name"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/building"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/people"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_baseline_business_24" />

        <TextView
            android:id="@+id/company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_marginStart="8dp"
            android:layout_marginTop="18dp"
            android:layout_toEndOf="@+id/building"
            android:text="@string/company"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/location_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/building"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_baseline_location_on_24" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/company"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="25dp"
            android:layout_toEndOf="@+id/location_pin"
            android:text="@string/location"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/repository_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="45dp"
            android:text="@string/repository"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/reposit_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/repository_title"
            android:layout_alignStart="@+id/repository_title"
            android:layout_alignEnd="@+id/repository_title"
            android:layout_marginTop="12dp"
            android:text="@string/reposit_number"
            android:textAlignment="center"
            android:textSize="30sp" />
    </RelativeLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:tabTextColor="@android:color/white">


    </com.google.android.material.tabs.TabLayout>


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>